# pulseaudio-modules-nemo

./: configure.ac
rpm/: pulseaudio-modules-nemo.spec
src/common/: libmeego-common.pc.in  shared-data.c  volume-proxy.c
src/common/include/meego/: proplist-nemo.h  shared-data.h  volume-proxy.h
src/common/include/sailfishos/: defines.h
src/mainvolume/: Makefile.am  listening-watchdog.c  mainvolume.c  mainvolume.h  module-meego-mainvolume.c
src/music/: Makefile.am  module-meego-music.c
src/parameters/: Makefile.am  module-meego-parameters.c  parameters.c
src/parameters/testmodule/: Makefile.am  module-meego-test-parameters.c
src/record/: Makefile.am  module-meego-record.c
src/sidetone/: Makefile.am  alsa-util-old.c  alsa-util-old.h  alsa-utils.c  alsa-utils.h  ctrl-element.c  ctrl-element.h  module-meego-sidetone.c  sidetone-args.h
src/stream-restore-nemo/: Makefile.am  module-stream-restore-nemo.c
src/test/: Makefile.am  module-meego-test.c
src/voice/: Makefile.am  module-meego-voice.c  voice-hw-sink-input.c  voice-hw-source-output.c  voice-raw-sink.c  voice-raw-source.c  voice-util.c  voice-voip-sink.c  voice-voip-source.c
